# flowerstore-new

./: .env  .gitignore  Procfile  README.md  create_superuser.py  main.py  manage.py  pyproject.toml  requirements.txt
.history/: README_20260113131520.md  README_20260113161219.md  README_20260113161258.md  README_20260113161304.md  README_20260113161325.md  README_20260113161406.md  README_20260113161407.md  README_20260113161409.md  README_20260113161448.md  README_20260113161451.md  README_20260113161507.md  README_20260113161513.md  README_20260113161516.md  README_20260113161912.md  README_20260113161924.md  README_20260113161926.md  README_20260113161935.md  README_20260113161938.md  README_20260113161941.md  README_20260113161943.md  README_20260113161952.md  README_20260113161955.md  README_20260113162001.md  README_20260113162004.md  README_20260113162012.md  README_20260113162019.md  README_20260113162029.md  README_20260113162030.md  README_20260113162033.md  README_20260113162050.md  README_20260113162051.md  README_20260113162136.md  README_20260113162141.md  README_20260113162142.md  README_20260113162144.md  README_20260113162150.md  README_20260113162153.md  README_20260113162159.md  README_20260113162201.md  README_20260113162206.md  (+7 more)
accounts/: forms.py  models.py  urls.py  views.py
fixtures/: dummy_data.json
flowerproducts/: admin.py  apps.py  forms.py  models.py  urls.py  utils.py  view_helpers.py  views.py
flowerstore/: asgi.py  settings.py  urls.py  wsgi.py
orders/: admin.py  constants.py  context_processors.py  forms.py  models.py  session.py  (+3 more)
(+109 files in other folders)
