[project]
name = "flowerstore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.1",
    "pillow>=12.1.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.13",
    "stripe>=14.3.0",
    "whitenoise>=6.12.0",
]
